# rinha-de-backend-2026-luckstai-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  info.json  run.sh  smoke.sh
deploy/haproxy/: haproxy.cfg
notes/: benchmark-history.md
scripts/: benchmark_local.sh  build_index.sh  build_ivf.sh  calibrate_in_network.sh  calibrate_local.sh  compare_algorithms.sh  estimated_requests.sh  prepare_local_test.sh  repeat_preview.sh  smoke_local.sh  stop_local.sh  sweep_ivf_variants.sh  sync_official_fixtures.sh  test_in_docker.sh
src/: config.rs  detector.rs  domain.rs  index.rs  ivf.rs  lib.rs  main.rs  vectorize.rs
test/: calibrate.js  smoke.js  test.js
