[package]
name = "rinha-backend-2026-luckstai-rust"
version = "0.1.0"
edition = "2021"
default-run = "api"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "build-index"
path = "src/bin/build_index.rs"

[[bin]]
name = "build-ivf"
path = "src/bin/build_ivf.rs"

[[bin]]
name = "bench-algorithms"
path = "src/bin/bench_algorithms.rs"

[[bin]]
name = "bench-http-path"
path = "src/bin/bench_http_path.rs"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[dependencies]
actix-web = "4.11.0"
anyhow = "1.0.100"
bytemuck = { version = "1.24.0", features = ["derive"] }
flate2 = "1.1.5"
memmap2 = "0.9.9"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["parsing", "formatting"] }
